--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "mycomponents",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --config webpack.config.js"
   },
   "author": "syswing",
   "license": "MIT",
@@ -13,7 +14,19 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/lodash": "^4.14.162",
+    "@types/react": "^16.9.52",
+    "classnames": "^2.2.6",
+    "css-loader": "^4.3.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "lodash": "^4.17.20",
+    "postcss-loader": "^4.0.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3"
   }
 }
