--- a/package.json
+++ b/package.json
@@ -5,26 +5,32 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config webpack.config.js"
+    "start": "webpack-dev-server --config webpack.config.js --mode development --open",
+    "server": "node ./example/src/server.js"
   },
   "author": "syswing",
   "license": "MIT",
   "devDependencies": {
+    "html-webpack-plugin": "^4.5.0",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@types/classnames": "^2.2.10",
     "@types/lodash": "^4.14.162",
-    "@types/react": "^16.9.52",
+    "@types/react": "^16.9.53",
     "classnames": "^2.2.6",
     "css-loader": "^4.3.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "lodash": "^4.17.20",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^4.0.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3"
