--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "sy": ["components/index.tsx"],
-      "sy/es/*": ["components/*"]
+      "sy": ["src/index.tsx"],
+      "sy/es/*": ["src/*"]
     },
     "strictNullChecks": true,
     "moduleResolution": "node",
