--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --config webpack.config.js --mode development --open",
-    "server": "node ./example/src/server.js"
+    "server": "node ./example/src/server.js",
+    "build": "webpack --config webpack.prod.js --mode production"
   },
   "author": "syswing",
   "license": "MIT",
   "devDependencies": {
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.0.0",
+    "terser-webpack-plugin": "^5.0.0",
     "webpack": "^4.44.2",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
