--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     },
     "strictNullChecks": true,
     "moduleResolution": "node",
+    "declaration": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "jsx": "react",
