--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "sy-components": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config ./devtools/webpack.dev.config.js --mode development --open",
+    "start": "webpack-dev-server --config ./build/webpack.dev.config.js --mode development --open",
     "server": "node ./example/src/server.js",
-    "build": "webpack --config ./devtools/webpack.prod.config.js",
+    "build": "webpack --config ./build/webpack.prod.config.js",
     "build:types": "tsc -p tsconfig.build.json",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
