--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "sy-components",
-  "version": "1.0.0",
-  "description": "mycomponents",
-  "sy-components": "index.ts",
+  "name": "syswing-react",
+  "version": "0.0.1",
+  "description": "syswing's components collection",
+  "syswing-react": "index.ts",
+  "main":"./dist/main.js",
+  "keywords": ["react","component"],
+  "private": false,
+  "repository": { "type": "git", "url": "https://github.com/syswing/syswing-react.git" },
+  "bugs": "https://github.com/syswing/syswing-react/issues",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --config ./build/webpack.dev.config.js --mode development --open",
@@ -15,6 +20,12 @@
   "author": "syswing",
   "license": "MIT",
   "devDependencies": {
+    
+    "@types/classnames": "^2.2.10",
+    "@types/lodash": "^4.14.162",
+    "@types/react": "^16.9.53",
+    "react": "^16.13.1",
+    "react-dom": "^16.14.0",
     "@babel/core": "^7.12.3",
     "@storybook/addon-actions": "^6.0.26",
     "@storybook/addon-essentials": "^6.0.26",
@@ -28,27 +39,22 @@
     "terser-webpack-plugin": "^5.0.0",
     "webpack": "^4.44.2",
     "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.11.0",
-    "webpackbar": "^4.0.0"
-  },
-  "dependencies": {
-    "@types/classnames": "^2.2.10",
-    "@types/lodash": "^4.14.162",
-    "@types/react": "^16.9.53",
-    "classnames": "^2.2.6",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "react-jss": "^10.4.0",
     "css-loader": "^4.3.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
-    "lodash": "^4.17.20",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0",
+    "webpackbar": "^4.0.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^4.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.14.0",
-    "react-jss": "^10.4.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3"
+    "style-loader": "^2.0.0"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.20"
   }
 }
