--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syswing-react",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "description": "syswing's components collection",
   "syswing-react": "index.ts",
   "main": "./dist/main.js",
@@ -21,7 +21,8 @@
     "build": "webpack --config ./build/webpack.prod.config.js",
     "build:types": "tsc -p tsconfig.build.json",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepublish": "npm run build"
   },
   "resolutions": {
     "styled-components": "^5"
