--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.7",
     "classnames": "^2.2.6",
     "color": "^3.1.3",
     "lodash": "^4.17.20",
